# lasercuts

./: .gitignore  IntersectionExtras.hs  compassearrings.hs  default.nix  flake.nix  lasercuts.cabal  lasercuts.nix  pentagramearrings.hs  shell.nix
app/: compassearrings-v2.hs  compassearrings.hs  pentagramearrings.hs
src/: LaserCutting.hs  SemigroupDo.hs
