name:                lasercuts
version:             0.1.0.0
synopsis:            pew pew lasers
-- description:
homepage:            https://github.com/bacchanalia/lasercuts
license:             GPL-3
license-file:        LICENSE
author:              Mike Zuser
maintainer:          mikezuser@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable compassearrings
  main-is:             compassearrings.hs
  other-modules:       LaserCutting
  other-extensions:    FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , PartialTypeSignatures
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TypeFamilies
                     , UndecidableInstances
  build-depends:       base
                     , diagrams-lib
                     , diagrams-contrib
                     , diagrams-cairo
                     , diagrams-svg
                     , mtl
  -- hs-source-dirs:
  default-language:    Haskell2010
