cabal-version:       3.0
name:                lasercuts
version:             0.1.0.0
synopsis:            pew pew lasers
homepage:            https://github.com/bacchanalia/lasercuts
license:             GPL-3.0-or-later
license-file:        LICENSE
author:              Zoe Zuser
maintainer:          zmzuser@gmail.com
build-type:          Simple

common common
  build-depends:
    , base
    , diagrams-lib
    , diagrams-contrib
    , diagrams-cairo
    , diagrams-svg
    , mtl
    , relude
  mixins:
    , base hiding (Prelude)
  default-language:   GHC2021
  default-extensions:
    , BlockArguments
    , LambdaCase
    , PartialTypeSignatures
    , QualifiedDo
    , RankNTypes
  ghc-options:
    -fno-warn-partial-type-signatures
    -fno-warn-wrong-do-bind

library LaserCutting
  import:             common
  hs-source-dirs:     src
  exposed-modules:    LaserCutting, SemigroupDo
  default-extensions: NoImplicitPrelude

common executable
  import:             common
  mixins:
    , LaserCutting (LaserCutting as Prelude)
    , LaserCutting
  hs-source-dirs:     app
  build-depends:
    , LaserCutting

executable compassearrings
  import:             executable
  main-is:            compassearrings.hs

executable compassearrings-v2
  import:             executable
  main-is:            compassearrings-v2.hs

executable pentagramearrings
  import:             executable
  main-is:            pentagramearrings.hs
